[package]
name = "edgeone"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = { version = "1.12.2", default-features = false, features = ["std"] }
time = "0.3.44"
sha2 = "0.10.9"
anyhow = "1.0.100"
proxy-wasm = "0.2.4"
log = "0.4.29"
hex = "0.4.3"
hmac = "0.12.1"
lru = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", features = ["raw_value"] }
